syntax = "proto3";

package search.v1;

option go_package = "github.com/nexusflow/nexusflow/pkg/proto/search/v1;";

message SearchRequest {
  string query = 1;
  repeated string entity_types = 2;
  map<string, string> filters = 3;
  string sort_by = 4;
  string sort_order = 5;
  int32 limit = 6;
  int32 offset = 7;
}

message SearchResult {
  string id = 1;
  string type = 2;
  string title = 3;
  string description = 4;
  map<string, string> metadata = 5;
  float score = 6;
}

message SearchResponse {
  repeated SearchResult results = 1;
  int32 total = 2;
  map<string, int32> facets = 3;
}

message SearchIssuesRequest {
  string query = 1;
  map<string, string> filters = 2;
  string sort_by = 3;
  string sort_order = 4;
  int32 limit = 5;
  int32 offset = 6;
}

message SearchIssuesResponse {
  repeated SearchResult results = 1;
  int32 total = 2;
}

message SearchProjectsRequest {
  string query = 1;
  map<string, string> filters = 2;
  int32 limit = 3;
  int32 offset = 4;
}

message SearchProjectsResponse {
  repeated SearchResult results = 1;
  int32 total = 2;
}

message SuggestRequest {
  string query = 1;
  int32 limit = 2;
}

message Suggestion {
  string text = 1;
  string type = 2;
  float score = 3;
}

message SuggestResponse {
  repeated Suggestion suggestions = 1;
}

service SearchService {
  rpc Search(SearchRequest) returns (SearchResponse);
  rpc SearchIssues(SearchIssuesRequest) returns (SearchIssuesResponse);
  rpc SearchProjects(SearchProjectsRequest) returns (SearchProjectsResponse);
  rpc Suggest(SuggestRequest) returns (SuggestResponse);
}
